ingress-myweb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-myweb-ingress-nginx-controller
  namespace: ingress-myweb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30082
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
